<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_detail"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:fitsSystemWindows="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/color_primary"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_user"
                    android:contentDescription="@string/app_name"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_github" />

                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user"
                    android:textColor="@color/white_transparent"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/txt_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no_bio"
                    android:textAlignment="center"
                    android:textColor="@color/white_transparent"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="18dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <!--                         Follower-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:id="@+id/txt_follower"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower_placeholder"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>

                        <!--                         following-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:id="@+id/txt_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower_placeholder"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>

                        <!--                         Follower-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Repository"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:id="@+id/txt_repo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="100"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>



    </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="1dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                        <TextView
                            android:id="@+id/tv_bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="20dp"
                            android:maxLines="4"
                            android:textSize="15sp"
                            android:visibility="gone"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@tools:sample/lorem/random"
                            tools:visibility="visible" />

                        <View
                            android:id="@+id/tv_bio_margin"
                            android:layout_marginTop="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            app:layout_constraintTop_toBottomOf="@id/tv_bio" />

                        <TextView
                            android:id="@+id/tv_company"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="12dp"
                            android:drawableStart="@drawable/baseline_people_outline_24"
                            android:drawablePadding="12dp"
                            android:gravity="center_vertical"
                            android:textSize="15sp"
                            android:visibility="gone"
                            app:layout_constraintTop_toBottomOf="@id/tv_bio_margin"
                            tools:text="Company"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="8dp"
                            android:drawableStart="@drawable/baseline_location_city_24"
                            android:drawablePadding="12dp"
                            android:gravity="center_vertical"
                            android:textSize="15sp"
                            android:visibility="gone"
                            app:layout_constraintTop_toBottomOf="@id/tv_company"
                            tools:text="Jakarta, ID"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_blog"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="8dp"
                            android:drawableStart="@drawable/baseline_link_24"
                            android:drawablePadding="12dp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_vertical"
                            android:textSize="15sp"
                            android:visibility="gone"
                            app:layout_constraintTop_toBottomOf="@id/tv_location"
                            tools:text="https://blog.io"
                            tools:visibility="visible" />



                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>




            </LinearLayout>
        </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>